# rl-infra

./: .gitignore  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
rl_infra/: base_types.py  utils.py
rl_infra/base_types/: base_types.py
rl_infra/edge/: __init__.py  config.py  robot_service.py  utils.py
rl_infra/impl/robot/edge/: robot_service.py
rl_infra/impl/robot/online/: __init__.py  robot_agent.py  robot_client.py  robot_environment.py  robot_transition.py
rl_infra/impl/tetris/offline/: __init__.py  dqn.py  tetris_data_service.py  tetris_model_service.py  tetris_schema.py  (+1 more)
rl_infra/offline/: dqn.py
rl_infra/online/impl/: __init__.py  robot_agent.py  robot_environment.py  robot_space.py
rl_infra/online/types/: __init__.py  agent.py  environment.py  space.py
rl_infra/online/utils/: robot_client.py
rl_infra/types/: __init__.py  agent.py  base_types.py  environment.py
rl_infra/types/offline/: __init__.py  backend.py  data_service.py  model_service.py  schema.py  services.py  training_service.py
rl_infra/types/online/: __init__.py  agent.py  environment.py  transition.py
rl_infra/utils/: utils.py
src/edge/: config.py  robot_service.py  utils.py
src/online/impl/: __init__.py  robot_agent.py  robot_space.py
src/online/types/: __init__.py  agent.py  environment.py  policy.py  space.py
src/online/utils/: __init__.py  robot_driver.py
src/rl_infra/: __init__.py
src/rl_infra/edge/: robot_service.py
src/rl_infra/online/: __init__.py
(+30 files in other folders)
