# pip documentation; https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
[build-system]
# build-system documentation; https://peps.python.org/pep-0517/#build-backend-interface
requires = ["setuptools==68.2.2", "setuptools-scm==8.0.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#setuptools documentation; https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
packages = ["rl_infra"]

[project]
# project documentation; https://peps.python.org/pep-0621/
name = "rl-infra"
authors = [{name = "Jonathan Lamar"}]
description = "Infra code for MDP models"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.10.14"]

[project.urls]
github = "https://github.com/jonathanlamar/rl-infra"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.distutils.bdist_wheel]
universal = 0
